Fix table overflowing

--- a/src/components/PageRenderer.module.scss
+++ b/src/components/PageRenderer.module.scss
@@ -100,23 +100,16 @@
   }
 
   table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+
     margin: 0 auto 2.1rem;
     background: var(--table-background);
     padding: 1rem;
     border-radius: 0.8rem;
     font-size: 1.6rem;
-    box-sizing: border-box;
     border-collapse: collapse;
-    overflow-x: auto;
-    white-space: nowrap;
-    display: block;
-    // width: clamp(var(--content-page-width), 100%, var(--content-page-width-wide));
-    max-width: min(100%, var(--content-page-width-wide));
-
-    tbody {
-      display: table;
-      min-width: 100%;
-    }
 
     th,
     td {
